<resources>
    <string name="app_name">YSVideoDemo</string>
    <string name="weixin_login">百度地图测试</string>
    <string name="openRetrofit">打开retrofit</string>
    <string name="get">GET</string>
    <string name="openRxBus2">RxBus2</string>
    <string name="login">登录</string>
    <string name="openLogin">登录界面</string>
    <string name="login_username">swadmin</string>
    <string name="login_password">chin2016</string>
    <string name="feedback">反馈</string>
    <string name="service_time">服务时间:   周一至周五8:30-16:00</string>
    <string name="service_phone">客服电话:  4000 811 699</string>
    <string name="open_myservice">我的客服</string>
    <string name="dialog_title">提交成功</string>
    <string name="dialog_message">感谢你的反馈</string>
    <string name="dialog_sure">确定</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_inputAdminTitle">输入管理员密码</string>
    <string name="dialog_inputAdminPassword">请输入密码</string>
    <string name="dialog_inputValueTitle">输入参数</string>
    <string name="dialog_setValueTitle">设置</string>
    <string name="dialog_confirm">是否确认修改</string>


    <string name="tv_myservice_title">我的客服</string>
    <string name="btn_startPager3">立即体验</string>
    <string name="pop_callPhone">拨打电话</string>
    <string name="pop_phoneNum">40000 811 699</string>
    <string name="tv_dialog_inputHint">请在这里输入</string>
    <string name="enter_username">请输入用户名</string>
    <string name="tv_login_remember">记住密码</string>
    <string name="tv_home_title">KAWA</string>
    <string name="tv_home_myDevice">我的设备</string>
    <string name="tv_home_monitoring">数据监控</string>
    <string name="tv_home_warning">预警监测</string>
    <string name="tv_home_setting">系统设置</string>
    <string name="tv_home_newProduct">新产品发布</string>
    <string name="tv_myself_title">我的</string>
    <string name="tv_myself_loginNow">立即登录</string>
    <string name="tv_myself_night">夜间模式</string>
    <string name="tv_myself_feedback">反馈问题</string>
    <string name="tv_myself_myservice">我的客服</string>
    <string name="tv_myself_update">检查更新</string>
    <string name="tv_myself_about">关于</string>
    <string name="exit">退出登录</string>
    <string name="tv_myself_username">用户名</string>
    <string name="tv_mydevice_mydevice">我的设备</string>
    <string name="tv_mydevice_allCount">设备总量</string>
    <string name="tv_mydevice_on">在线设备</string>
    <string name="tv_mydevice_off">离线设备</string>
    <string name="tv_feedback_title">反馈</string>
    <string name="tv_feedback_submit">提交</string>
    <string name="et_feedback_inputQuestion">请描述您的问题...</string>
    <string name="et_feedback_inputPhone">请输入您的电话...</string>
    <string name="tv_feedback_addPicExplain">添加图片说明(选填项)</string>
    <string name="tv_mydevice_search_cancel">取消</string>
    <string name="tv_mydevice_list_search_pleaseInputDeviceName">请输入设备名称</string>
    <string name="tv_warning_title">预警监测</string>
    <string name="tv_warning_listTitle_date">预警时间</string>
    <string name="tv_warning_listTitle_name">预警名称</string>
    <string name="tv_warning_listTitle_status">预警状态</string>
    <string name="tv_warning_list_search_startTime">请输入开始时间</string>
    <string name="tv_warning_list_search_endTime">请输入结束时间</string>
    <string name="tv_mydevice_map_on">在线</string>
    <string name="tv_mydevice_map_off">离线</string>
    <string name="tv_mydevice_map_all">全部</string>
    <string name="tv_warning_map_all">全部</string>
    <string name="tv_warning_map_green">绿色</string>
    <string name="tv_warning_map_yellow">黄色</string>
    <string name="tv_warning_map_orange">橙色</string>
    <string name="tv_warning_map_red">红色</string>
    <string name="tv_data_monitoring">数据监控</string>
    <string name="tv_data_show_internalPressure">内腔压力</string>
    <string name="tv_dataShow_dataShow">数据显示</string>
    <string name="tv_data_show_internalTemperature">内腔温度</string>
    <string name="tv_data_show_waterTemperature">出水温度</string>
    <string name="tv_data_show_exhaustGasTemperature">排烟温度</string>
    <string name="tv_data_show_meanLoad">平均负荷</string>
    <string name="tv_data_show_energy">节能量</string>
    <string name="tv_dataShow_dataAnalyze">数据分析</string>
    <string name="tv_about_title">关于</string>
    <string name="tv_about_aboutKawa">关于KAWA</string>
    <string name="tv_about_privacy">隐私保护政策</string>
    <string name="tv_aboutKawa_title">关于KAWA</string>
    <string name="tv_privacy_title">隐私保护政策</string>
    <string name="pop_exit">退出账号</string>
    <string name="pop_isExit">确定要退出吗?</string>
    <string name="tv_myself_version">V1.1.1.0</string>
    <string name="tv_myself_versionCode">V1.1.1.0</string>
    <string name="tv_myself_newestVersion">最新版本</string>
    <string name="pop_updateVersion">版本更新</string>
    <string name="pop_updateMessage">更新版本可以体验最新功能</string>
    <string name="permission_get_accounts_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_GET_ACCOUNTS</string>
    <string name="permission_read_phone_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_READ_PHONE_STATE</string>
    <string name="permission_call_phone_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_CALL_PHONE</string>
    <string name="permission_camera_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_CAMERA</string>
    <string name="permission_access_fine_location_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_ACCESS_FINE_LOCATION</string>
    <string name="permission_access_coarse_location_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_ACCESS_COARSE_LOCATION</string>
    <string name="permission_read_external_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_READ_EXTERNAL_STORAGE</string>
    <string name="permission_white_external_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_WRITE_EXTERNAL_STORAGE</string>
    <string name="permission_recode_audio_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_RECORD_AUDIO</string>
    <string name="tv_mydevice_readyNavigationTitle">导航</string>
    <string name="tv_mydevice_readyNavigation_endPoint">终点:</string>
    <string name="tv_mydevice_readyNavigation_gps">定位:</string>
    <string name="tv_mydevice_readyNavigation_address_now">当前位置</string>
    <string name="tv_readyNavigation_startNavigation">开始导航</string>
    <string-array name="sdkapi_items">
        <item>关键字搜索</item>
        <item>周边搜索</item>
        <item>手机语音识别</item>
        <item>外部语音流识别</item>
        <item>TTS</item>
        <item>反GEO</item>
        <item>线路规划demo1</item>
        <item>线路规划demo2</item>
        <item>离线数据管理</item>
        <item>自定义图层</item>
    </string-array>
    <string name="search_start">搜索</string>
    <string name="search_tips">离线检索需要使用"导航离线数据下载"demo下载数据之后才能正常使用！检索范围固定为广东省-深圳市，其他城市请修改demo源代码。</string>
    <string name="antigeo_tips">离线反geo需要使用"导航离线数据下载"demo下载数据之后才能正常使用！</string>
    <string name="asr_tips">语音识别需要使用"导航离线数据下载"demo下载广东数据之后才能正常使用！其他城市请修改demo源代码。</string>
    <string name="suggest_start">提示</string>
    <string name="search_hint">请输入关键字</string>
    <string name="record_recording">\u2026正在录音\u2026</string>
    <string name="record_recognizing">\u2026正在识别\u2026</string>
    <string name="voiceinput">外部语音流识别</string>
    <string name="voicenormal">手机语音流识别</string>
    <string name="keyword_search">关键字搜索</string>
    <string name="space_search">周边搜索</string>
    <string name="search_result">搜索结果</string>
    <string name="search_empty">识别结果为空</string>
    <string name="search_fail">识别无效</string>
    <string name="record_start">点击开启</string>

    <!-- 离线数据管理 -->
    <string name="title_route_guide_demo">1. GPS导航(RouteGuideDemo)</string>
    <string name="title_route_plan_demo">2. 路线规划(RoutePlanDemo)</string>
    <string name="title_cruiser">3. 电子狗(CruiserDemo)</string>
    <string name="title_layer">4. 自定义地图图层(MapLayerDemo)</string>
    <string name="title_offline_data">5. 导航离线数据下载(DownloadDemo)</string>
    <string name="title_keyword_search">6. POI搜索-关键字(KeySearchDemo)</string>
    <string name="title_nearby">7. POI搜索-分类(CatalogSearchDemo)</string>
    <string name="title_degeo">8. 反GEO(ReverseGeoDemo)</string>
    <string name="title_tts">9. TTS-Text To Speech(TTSDemo)</string>
    <string name="title_asr">10. 语音识别(VoiceDemo)</string>
    <string name="title_asr_input">11. 外部语音识别(VoiceInputDemo)</string>
    <string name="title_key_verify_demo">12. 密钥验证(KeyVerifyDemo)</string>
    <string name="title_charset_change_demo">13. 简体繁体转换(CharsetChangeDemo)</string>
    <string name="online">在线</string>
    <string name="offline">离线</string>

    <!-- 繁体简体切换 -->
    <string name="change_to_simplified">地图切换为简体</string>
    <string name="change_to_traditional">地图切换为繁体</string>
    <string name="change_to_simplified_tips">已切换为简体，请在地图图层页看效果</string>
    <string name="change_to_traditional_tips">已切换为繁体，请在地图图层页看效果</string>
    <string name="tv_system_setting">系统设置</string>
    <string name="tv_setting_parameter">参数设置</string>
    <string name="tv_setting_control">控制设置</string>
    <string name="tv_monitoring_video">数据监控</string>
    <string name="password_fifter">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="tv_dialog_longClick">长按按钮控制</string>
</resources>
