<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.shuangxiang.ysvideodemo.MainActivity">


    <SurfaceView
        android:id="@+id/realplay_sv"
        android:layout_width="600dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="false"
        android:background="@android:color/transparent"/>

    <Button
        android:id="@+id/btn_weixin_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/realplay_sv"
        android:text="@string/weixin_login"/>

    <Button
        android:id="@+id/btn_openRetrofit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_weixin_login"
        android:text="@string/openRetrofit"/>

    <Button
        android:id="@+id/btn_openLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_openRetrofit"
        android:text="@string/openLogin"/>

    <Button
        android:id="@+id/btn_openFeedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_openLogin"
        android:text="@string/feedback"/>
    <Button
        android:id="@+id/btn_openmyservice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_openFeedback"
        android:text="@string/open_myservice"/>

</RelativeLayout>
