<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <android.support.v7.widget.Toolbar

        android:id="@+id/tb_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="true"
        android:fitsSystemWindows="true"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tv_about_title"
            android:textColor="#627281"
            android:textSize="16sp"
            />

    </android.support.v7.widget.Toolbar>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#e6e6e6"/>

    <TextView
        android:id="@+id/tv_about_aboutKawa"
        android:layout_width="match_parent"
        android:layout_height="120px"
        android:gravity="center_vertical"
        android:paddingLeft="60px"
        android:text="@string/tv_about_aboutKawa"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#e6e6e6"/>

    <TextView
        android:id="@+id/tv_about_privacy"
        android:layout_width="match_parent"
        android:layout_height="120px"
        android:gravity="center_vertical"
        android:paddingLeft="60px"
        android:text="@string/tv_about_privacy"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#e6e6e6"/>

</LinearLayout>