<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/pop_bg"
                android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="706px"
        android:layout_height="336px"
        android:layout_centerInParent="true"
        android:background="@drawable/pop_bg_white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_dialog_allTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="58px"
            android:gravity="center_horizontal"
            android:text="@string/dialog_title"
            android:textColor="#627281"
            android:textSize="42px"/>

        <TextView
            android:id="@+id/tv_dialog_allMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="38px"
            android:gravity="center_horizontal"
            android:text="@string/dialog_message"
            android:textColor="#8a9aa7"
            android:textSize="30px"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="56px"
            android:background="#c9d3dc"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_dialog_allCancel"

                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/dialog_cancel"
                android:textColor="#00a1e9"
                android:textSize="40px"/>

            <TextView
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="#00a1e9"/>

            <TextView
                android:id="@+id/tv_dialog_allSure"
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/dialog_sure"
                android:textColor="#00a1e9"
                android:textSize="40px"/>
        </LinearLayout>


    </LinearLayout>


</RelativeLayout>